# sortwai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.env.example  compose.debug.yml  compose.yml  dummy_data.json  entrypoint.sh  manage.py  pyproject.toml
API/: main.py
barcode-service/: api.py  barcode_db_setup.sql  database.py  products.csv  search.py  service.py
chat-document-api/: add_to_graph.py  main.py
image-recognition-service/: handlers.py  main.py  proxies.py
llm-document-api/: .env.example  api.py  main.py  pyproject.toml  text.md
pdf-conversion/: main.py  requirements.txt
search-service/: handlers.py  helpers.py  interfaces.py  main.py  registry.py  search_service.py  test_file.txt
sortwai/: asgi.py  settings.py  urls.py  wsgi.py
sortwai/operator/: apps.py  urls.py
sortwai/operator/templates/: category_list.html  document_form.html  document_list.html  operator_base.html
sortwai/operator/views/: category.py  document.py
sortwai/users/: admin.py  apps.py  models.py
sortwai/users/migrations/: 0001_initial.py  0002_alter_user_municipality.py
sortwai/waste/: admin.py  apps.py  document.py  forms.py  models.py  views.py
sortwai/waste/migrations/: 0001_initial.py  0002_alter_category_options_alter_location_options_and_more.py  0003_alter_location_targets.py  0004_alter_document_options_document_created_at.py  0005_category_do_category_dont_category_municipality.py  0006_location_show_on_main.py  0007_barcode.py
sortwai/waste/static/: app.css
sortwai/waste/static/barcode/: scanner.js
sortwai/waste/static/css/: base.css  reset.css  scanner.css
sortwai/waste/static/js/: location.js
sortwai/waste/templates/: base.html  categories.html  chat.html  docs.html  image.html  locations.html  results.html  scanner.html  true_base.html
sortwai/waste/templates/partials/: categories2.html  product.html
