[tool.poetry]
name = "sortwai"
version = "0.0.0"
description = "Odpadkársky systém plus plus"
authors = ["David Krchňavý <krchnavy11@uniba.sk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.4"
django-debug-toolbar = "^4.4.6"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"
django-widget-tweaks = "^1.5.0"
django-probes = "^1.7.0"
psycopg = { extras = ["binary"], version = "^3.2.3" }
pypdf = "^5.1.0"
markdownify = "^0.14.1"
pillow = "^11.0.0"
geopy = "^2.4.1"
fastapi = "^0.115.6"
pydantic = "^2.10.5"
langchain = "^0.3.14"
langchain-experimental = "^0.3.4"
langchain-neo4j = "^0.2.0"
langchain-openai = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "DJ", "T20", "Q"]
