[tool.poetry]
name = "llm-document-api"
version = "0.1.0"
description = ""
authors = ["David Krchňavý <david.krchnavy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.14"
langchain-neo4j = "^0.2.0"
langchain-openai = "^0.3.0"
langgraph = "^0.2.62"
langchain-experimental = "^0.3.4"
json-repair = "^0.35.0"
pymupdf = "^1.25.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
